# bitmxr

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  roadmap.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-artifact.yml  ci.yml
scripts/: setup.sh
src-tauri/: .env.example  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  project.rs
src-tauri/src/audio_engine/: devices.rs  mod.rs  plugins.rs  tracks.rs
src-tauri/tests/: audio_engine.rs  command.rs  device_list.rs  devices.rs  plugin_scan.rs  plugins.rs  project.rs  tracks.rs
