[package]
name = "bitmxr"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitmxr"
path = "src/lib.rs"

[[bin]]
name = "bitmxr"
path = "src/main.rs"
test = false
required-features = ["cli"]

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
cpal = "0.16"

[dev-dependencies]
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
cli = []

[package.metadata.tauri]
# to be filled by tauri build
