[package]
name = "bitmxr"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitmxr"
path = "src/lib.rs"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
cpal = "0.16"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dev-dependencies]

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
no-audio-devices = []

[package.metadata.tauri]
# to be filled by tauri build
