[package]
name = "bitmxr"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitmxr"
path = "src/lib.rs"

[dependencies]
tauri = { version = "1.8.3", features = ["api-all"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
cpal = "0.16.0"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dev-dependencies]

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
no-audio-devices = []

[package.metadata.tauri]
# to be filled by tauri build
